[gd_scene load_steps=12 format=3 uid="uid://y56cvd8l25uc"]

[ext_resource type="Texture2D" uid="uid://dw62biam7ifng" path="res://Assets/Tileset/TX Props.png" id="1_7nqw1"]
[ext_resource type="Script" path="res://Objects/chest.gd" id="1_u8yu8"]
[ext_resource type="Texture2D" uid="uid://doo8o8itso4kh" path="res://Assets/Shadow/Click.png" id="2_dr53e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qficq"]
atlas = ExtResource("2_dr53e")
region = Rect2(0, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o58h6"]
atlas = ExtResource("2_dr53e")
region = Rect2(18, 0, 18, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_sx3ou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qficq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o58h6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwyeh"]
size = Vector2(64, 60)

[sub_resource type="Curve" id="Curve_ahhhv"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.566751, 0.963542), 0.0, 0.0, 0, 0, Vector2(0.988665, 0.0416666), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_gj1qo"]
curve = SubResource("Curve_ahhhv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iibhh"]
emission_shape = 1
emission_sphere_radius = 56.77
particle_flag_disable_z = true
gravity = Vector3(0, -98, 0)
angular_velocity_min = -130.29
angular_velocity_max = 236.57
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 10.476
damping_max = 75.476
angle_min = -332.6
angle_max = 582.9
scale_min = 5.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_gj1qo")
color = Color(1, 1, 0.352941, 1)
hue_variation_min = 0.82
hue_variation_max = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5yrhc"]
radius = 76.4853

[node name="Chest" type="StaticBody2D"]
z_index = 10
y_sort_enabled = true
script = ExtResource("1_u8yu8")

[node name="Click" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
position = Vector2(29, -34)
sprite_frames = SubResource("SpriteFrames_sx3ou")
autoplay = "default"

[node name="Close" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-2, 0)
texture = ExtResource("1_7nqw1")
region_enabled = true
region_rect = Rect2(190.453, 60.6129, 66.2752, 60.8585)

[node name="Open" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, -19)
texture = ExtResource("1_7nqw1")
region_enabled = true
region_rect = Rect2(191.779, 152.369, 63.9895, 97.4326)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_mwyeh")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 10
process_material = SubResource("ParticleProcessMaterial_iibhh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_5yrhc")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
